--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="John's portfolio website with skills and client feedback">
     <title>Portfolio</title>
 
     <link rel="stylesheet" href="style.css">
@@ -41,7 +42,7 @@
                 <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in
                     eros
                     elementum tristique.</p>
-                <button class="btn-primary">Get In Touch</button>
+                <a href="#contact"><button class="btn-primary">Get In Touch</button></a>
             </div>
             <div class="content-right">
                 <img loading="lazy" class="man-photo" src="./images/Group 11 1.webp" alt="photo of a man">
