Add srcset for image of John

--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
                 <a href="#contact"><button class="btn-primary">Get In Touch</button></a>
             </div>
             <div class="content-right" aria-label="Image of John">
-                <img loading="lazy" class="man-photo" src="./images/Group 11 1.webp" alt="photo of a man">
+                <img loading="lazy" class="man-photo" alt="photo of a man" srcset="
+                        ./images/John1_5x.webp 1600w,
+                        ./images/John1x.webp 1440w,
+                        ./images/John075x.webp 975w,
+                        ./images/John05x.webp 756w
+                        " src="./images/John1x.webp">
             </div>
         </div>
 
